[package]
edition = "2024"

name = "kutil-std-macros"
description = "Procedural macros for kutil::std"
version = "0.0.4"
rust-version = "1.92"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/kutil"
documentation = "https://docs.rs/kutil"
authors = ["Tal Liron"]

readme = "../README.md"

categories = ["development-tools"] # https://crates.io/category_slugs
keywords = ["kutil", "std"]

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = "2.0.113"

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
